--- a/examples/use-relative-path/source/index.html
+++ b/examples/use-relative-path/source/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<title><%= htmlWebpackPlugin.options.title %></title>
+	</head>
+	<body>
+		<img src="${require(`../../../.github/assets/file_loader_icon.svg`)}" width="30" height="30" alt="">
+	</body>
 </html>
