docs: sample build fixed up

--- a/examples/use-relative-path/source/index.html
+++ b/examples/use-relative-path/source/index.html
@@ -5,6 +5,9 @@
 		<title><%= htmlWebpackPlugin.options.title %></title>
 	</head>
 	<body>
-		<img src="${require(`../../../.github/assets/file_loader_icon.svg`)}" width="30" height="30" alt="">
+		<canvas id="background"></canvas>
+		<div>
+			<img src="${require(`../../../.github/assets/file_loader_icon.svg`)}" width="30" height="30" alt="">
+		</div>
 	</body>
 </html>
